--- a/bucket1/bucket.yml
+++ b/bucket1/bucket.yml
@@ -1,5 +1,7 @@
 flows:
   296aaa30-66c6-40b9-83cf-33ba17d77b56: {ver: 1, file: image1.snapshot, author: anonymous,
     created: 1633523386479, flowName: image1, flowDesc: version1}
+  a2442dd7-9ca3-42c8-8aa2-c694ef3d4a75: {ver: 1, file: FTPTOS3.snapshot, comments: version
+      1, author: anonymous, created: 1633524650975, flowName: FTPTOS3, flowDesc: FTPTOS3}
 layoutVer: 1
 bucketId: bed7d320-8d2e-41f2-8de8-f08abe977675
