--- a/bucket2/bucket.yml
+++ b/bucket2/bucket.yml
@@ -1,4 +1,7 @@
 flows:
+  d87a80cb-a5c0-4841-a5fa-33b6c077fe94: {ver: 1, file: GoogleAnalyticsAccessToken.snapshot,
+    comments: GoogleAnalyticsAccessToken, author: anonymous, created: 1633526584670,
+    flowName: GoogleAnalyticsAccessToken, flowDesc: GoogleAnalyticsAccessToken}
   7110716e-be86-4f72-b2ab-89ec311c0499: {ver: 2, file: SFTPTOS3.snapshot, comments: added
       comments, author: anonymous, created: 1633526052362, flowName: SFTPTOS3, flowDesc: SFTPTOS3}
 layoutVer: 1
