--- a/bucket1/bucket.yml
+++ b/bucket1/bucket.yml
@@ -3,5 +3,7 @@ flows:
     created: 1633523386479, flowName: image1, flowDesc: version1}
   a2442dd7-9ca3-42c8-8aa2-c694ef3d4a75: {ver: 1, file: FTPTOS3.snapshot, comments: version
       1, author: anonymous, created: 1633524650975, flowName: FTPTOS3, flowDesc: FTPTOS3}
+  e7434fa7-19a9-4755-b372-3705d8e82776: {ver: 1, file: CallGoogleAPI.snapshot, comments: CallGoogleAPI,
+    author: anonymous, created: 1633526624528, flowName: CallGoogleAPI, flowDesc: CallGoogleAPI}
 layoutVer: 1
 bucketId: bed7d320-8d2e-41f2-8de8-f08abe977675
