--- a/bucket1/bucket.yml
+++ b/bucket1/bucket.yml
@@ -5,5 +5,7 @@ flows:
       1, author: anonymous, created: 1633524650975, flowName: FTPTOS3, flowDesc: FTPTOS3}
   e7434fa7-19a9-4755-b372-3705d8e82776: {ver: 1, file: CallGoogleAPI.snapshot, comments: CallGoogleAPI,
     author: anonymous, created: 1633526624528, flowName: CallGoogleAPI, flowDesc: CallGoogleAPI}
+  e781ccb9-81ac-494f-bbb5-a8fbad0faca2: {ver: 1, file: ConnectMySQL.snapshot, comments: ConnectMySQL,
+    author: anonymous, created: 1633526707876, flowName: ConnectMySQL, flowDesc: ConnectMySQL}
 layoutVer: 1
 bucketId: bed7d320-8d2e-41f2-8de8-f08abe977675
