--- a/bucket2/bucket.yml
+++ b/bucket2/bucket.yml
@@ -2,6 +2,8 @@ flows:
   d87a80cb-a5c0-4841-a5fa-33b6c077fe94: {ver: 1, file: GoogleAnalyticsAccessToken.snapshot,
     comments: GoogleAnalyticsAccessToken, author: anonymous, created: 1633526584670,
     flowName: GoogleAnalyticsAccessToken, flowDesc: GoogleAnalyticsAccessToken}
+  fb338ec0-3de3-4d43-a78b-5289d076a96b: {ver: 1, file: getfiles.snapshot, comments: getfiles,
+    author: anonymous, created: 1633592333237, flowName: getfiles, flowDesc: getfiles}
   7110716e-be86-4f72-b2ab-89ec311c0499: {ver: 2, file: SFTPTOS3.snapshot, comments: added
       comments, author: anonymous, created: 1633526052362, flowName: SFTPTOS3, flowDesc: SFTPTOS3}
 layoutVer: 1
